--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
 REACT_APP_ENV=dev
-REACT_APP_API_BASE_URL=http://localhost:8080
+REACT_APP_API_BASE_URL=http://10.229.169.233:8080
 REACT_APP_TIMEOUT=300000
 DISABLE_ESLINT_PLUGIN=true
-HTTPS=true
-SSL_CRT_FILE=./localhost.pem
-SSL_KEY_FILE=./localhost-key.pem
